target/release/build/anyhow-60877d9b78949ad0/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> C:\Users\Sminc\Desktop\launchpad\target\release\build\anyhow-60877d9b78949ad0\out\probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
